--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,10 @@
 /connect.lock
 /coverage/*
 /libpeerconnection.log
-npm-debug.log*
+npm-debug.log
 testem.log
+/nbproject/private/
+
+#ide
+.idea/
+.DS_Store
